--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,8 +3,11 @@
 
     <dimen name="fifteen_sp">15sp</dimen>
 
+
+    <dimen name="zero_dp">0dp</dimen>
     <dimen name="five_dp">5dp</dimen>
     <dimen name="ten_dp">10dp</dimen>
+    <dimen name="sixteen_dp">16dp</dimen>
     <dimen name="twenty_four_dp">24dp</dimen>
 
 </resources>
