--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -32,19 +32,39 @@
         <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="50"
                 android:id="@+id/crime_date_button"
                 android:layout_margin="@dimen/five_dp"/>
 
         <CheckBox
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="50"
                 android:id="@+id/crime_solve_check_box"
                 android:layout_margin="@dimen/five_dp"
                 android:text="@string/crime_solved_label"/>
 
     </LinearLayout>
 
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="@dimen/five_dp">
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/crime_suspect_button"
+               android:layout_weight="50"
+                android:text="@string/crime_suspect_text"/>
+
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/crime_report_button"
+                android:layout_weight="50"
+                android:text="@string/crime_report_text"/>
+    </LinearLayout>
 
 </LinearLayout>
