--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -37,4 +37,18 @@
             android:layout_margin="@dimen/five_dp"
             android:text="@string/crime_solved_label"/>
 
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/crime_suspect_button"
+            android:layout_margin="@dimen/five_dp"
+            android:text="@string/crime_suspect_text"/>
+
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/crime_report_button"
+            android:layout_margin="@dimen/five_dp"
+            android:text="@string/crime_report_text"/>
+
 </LinearLayout>
