--- a/app/src/main/res/layout-land/fragment_crime.xml
+++ b/app/src/main/res/layout-land/fragment_crime.xml
@@ -4,18 +4,54 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/crime_title_text_view"
-            android:text="@string/crime_title_label"
-            style="?android:listSeparatorTextViewStyle"/>
+            android:orientation="horizontal">
 
-    <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/crime_title_edit_text"
-            android:hint="@string/crime_title_hint"/>
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_margin="@dimen/two_dp">
+
+            <ImageView
+                    android:layout_width="@dimen/eighty_dp"
+                    android:layout_height="@dimen/eighty_dp"
+                    android:id="@+id/crime_photo"
+                    android:scaleType="centerInside"
+                    android:background="@android:color/darker_gray"
+                    android:cropToPadding="true"/>
+
+            <ImageButton
+                    android:layout_width="@dimen/twenty_dp"
+                    android:layout_height="@dimen/twenty_dp"
+                    android:id="@+id/crime_camera"/>
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_margin="@dimen/two_dp"
+                android:layout_weight="9">
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/crime_title_label"
+                    style="?android:listSeparatorTextViewStyle"/>
+
+            <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/crime_title_edit_text"
+                    android:layout_margin="@dimen/two_dp"
+                    android:hint="@string/crime_title_hint"/>
+
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
             android:layout_width="match_parent"
@@ -56,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/crime_suspect_button"
-               android:layout_weight="50"
+                android:layout_weight="50"
                 android:text="@string/crime_suspect_text"/>
 
         <Button
