--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -4,18 +4,52 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/crime_title_text_view"
-            android:text="@string/crime_title_label"
-            style="?android:listSeparatorTextViewStyle"/>
+   <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+       <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:orientation="vertical"
+               android:layout_margin="@dimen/two_dp">
 
-    <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/crime_title_edit_text"
-            android:hint="@string/crime_title_hint"/>
+           <ImageView
+                   android:layout_width="@dimen/eighty_dp"
+                   android:layout_height="@dimen/eighty_dp"
+                   android:id="@+id/crime_photo"
+                   android:scaleType="centerInside"
+                   android:background="@android:color/darker_gray"
+                   android:cropToPadding="true"/>
+
+           <ImageButton
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/crime_camera"/>
+       </LinearLayout>
+
+       <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:orientation="vertical"
+               android:layout_margin="@dimen/two_dp"
+               android:layout_weight="1">
+
+           <TextView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:text="@string/crime_title_label"
+                   style="?android:listSeparatorTextViewStyle"/>
+
+           <EditText
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:id="@+id/crime_title_edit_text"
+                   android:layout_margin="@dimen/two_dp"
+                   android:hint="@string/crime_title_hint"/>
+
+       </LinearLayout>
+   </LinearLayout>
 
     <TextView
             android:layout_width="match_parent"
