--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,9 +5,13 @@
 
 
     <dimen name="zero_dp">0dp</dimen>
+    <dimen name="two_dp">2dp</dimen>
     <dimen name="five_dp">5dp</dimen>
     <dimen name="ten_dp">10dp</dimen>
     <dimen name="sixteen_dp">16dp</dimen>
+    <dimen name="twenty_dp">20dp</dimen>
     <dimen name="twenty_four_dp">24dp</dimen>
+    <dimen name="forty_dp">40dp</dimen>
+    <dimen name="eighty_dp">80dp</dimen>
 
 </resources>
