--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="ripe_lemon_yellow">#F7CA18</color>
     <color name="ecstasy_orange">#F9690E</color>
     <color name="thunderbird_red">#D91E18</color>
+    <color name="royal_blue">#4183D7</color>
     <color name="black">#000000</color>
     <color name="silver_grey">#BFBFBF</color>
     <color name="gallery_white">#EEEEEE</color>
