--- a/app/src/main/res/layout/fragment_container_two_pane.xml
+++ b/app/src/main/res/layout/fragment_container_two_pane.xml
@@ -20,7 +20,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:id="@+id/detail_fragment_container"
-            android:layout_weight="3">
+            android:layout_weight="3"
+            android:background="@color/royal_blue">
 
 
     </FrameLayout>
